dhall/tests/type-errors/unit/RightBiasedRecordMergeLhsNotRecord.txt
Type error: error: MustCombineRecord
 --> <current file>:1:0
  |
1 | True ⫽ {=}
  | ^^^^^^^^^^ MustCombineRecord
  |
